UX: fix textarea height on mobile (#28495)

--- a/app/assets/stylesheets/common/form-kit/_control-textarea.scss
+++ b/app/assets/stylesheets/common/form-kit/_control-textarea.scss
@@ -6,10 +6,10 @@
   margin: 0 !important;
   min-width: auto !important;
   padding: 0.5em !important;
+  height: 150px !important;
 
   // prevents firefox/chrome to add spacing under textarea
   display: block;
 
-  height: 150px;
   border-radius: var(--d-input-border-radius);
 }
